cargo_check_flow.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
warning: method `cleanup_expired_tokens` is never used
   --> crates/auth-core/src/services/token_service.rs:192:14
    |
147 | impl TokenEngine {
    | ---------------- method in this implementation
...
192 |     async fn cleanup_expired_tokens(&self) {}
    |              ^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `project_id` is never read
  --> crates/auth-core/src/services/otp_delivery.rs:58:5
   |
57 | pub struct FirebaseOtpProvider {
   |            ------------------- field in this struct
58 |     project_id: String,
   |     ^^^^^^^^^^

warning: `auth-core` (lib) generated 2 warnings
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
warning: field `token_url` is never read
 --> crates/auth-protocols/src/oauth.rs:9:5
  |
5 | pub struct OAuthService {
  |            ------------ field in this struct
...
9 |     token_url: String,
  |     ^^^^^^^^^
  |
  = note: `OAuthService` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `validation_key` is never read
  --> crates/auth-db/src/sharding.rs:22:5
   |
16 | pub struct ShardManager {
   |            ------------ field in this struct
...
22 |     validation_key: String,
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `auth-protocols` (lib) generated 1 warning
warning: `auth-db` (lib) generated 1 warning
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
error[E0583]: file not found for module `oidc_provider`
  --> crates/auth-api/src/handlers/mod.rs:13:1
   |
13 | pub mod oidc_provider;
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `oidc_provider`, create file "crates/auth-api/src/handlers/oidc_provider.rs" or "crates/auth-api/src/handlers/oidc_provider/mod.rs"
   = note: if there is a `mod oidc_provider` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
  --> crates/auth-api/src/handlers/auth_flow.rs:18:5
   |
18 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused import: `crate::AppState`
  --> crates/auth-api/src/handlers/lazy_reg.rs:13:5
   |
13 | use crate::AppState;
   |     ^^^^^^^^^^^^^^^

warning: unused variable: `state`
  --> crates/auth-api/src/handlers/auth_flow.rs:77:11
   |
77 |     State(state): State<AppState>,
   |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `payload`
  --> crates/auth-api/src/handlers/auth_flow.rs:78:10
   |
78 |     Json(payload): Json<StartFlowRequest>,
   |          ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_payload`

warning: unused variable: `state`
   --> crates/auth-api/src/handlers/auth_flow.rs:100:11
    |
100 |     State(state): State<AppState>,
    |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `state`
   --> crates/auth-api/src/handlers/auth_flow.rs:117:11
    |
117 |     State(state): State<AppState>,
    |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

For more information about this error, try `rustc --explain E0583`.
warning: `auth-api` (lib) generated 7 warnings
error: could not compile `auth-api` (lib) due to 1 previous error; 7 warnings emitted
